fixed some bugs in controlers

--- a/src/main/resources/com/intermediary/welcome.fxml
+++ b/src/main/resources/com/intermediary/welcome.fxml
@@ -44,6 +44,6 @@
             </LinearGradient>
          </fill>
       </Text>
-      <WebView fx:id="svgRenderer" blendMode="MULTIPLY" cache="true" layoutX="453.0" layoutY="420.0" onMouseEntered="#log" onMouseExited="#log" prefHeight="200.0" prefWidth="200.0" />
+      <WebView fx:id="svgRenderer" blendMode="MULTIPLY" cache="true" layoutX="453.0" layoutY="420.0"  prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
