--- a/src/main/resources/com/intermediary/primary.fxml
+++ b/src/main/resources/com/intermediary/primary.fxml
@@ -13,122 +13,153 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="719.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.intermediary.controllers.PrimaryController">
-   <children>
-      <ImageView fitHeight="780.0" fitWidth="1080.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@peter-olexa-Q5GnQxjX7Jk-unsplash.jpg" />
-         </image>
-      </ImageView>
-      <HBox id="sideBarHeader" alignment="CENTER" layoutX="14.0" layoutY="20.0" prefHeight="29.0" prefWidth="265.0" spacing="150.0">
-         <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="30.0" text="Projects">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <ImageView fx:id="plusButton" fitHeight="100.0" fitWidth="30.0" onMouseClicked="#addProject" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@icons8-plus-48.png" />
-               </image>
-            </ImageView>
-         </children>
-      </HBox>
-      <VBox id="sideBarContainer" fillWidth="false" layoutX="14.0" layoutY="58.0" prefHeight="708.0" prefWidth="273.0" spacing="15.0">
-         <children>
-            <TextField prefHeight="25.0" prefWidth="265.0" promptText="Search Projects" />
-            <ListView fx:id="sideBarList" prefHeight="546.0" prefWidth="265.0" />
-            <Button fx:id="signoutButton" mnemonicParsing="false" onMouseClicked="#signOut" prefHeight="25.0" prefWidth="266.0" text="sign out" textFill="#184965" />
-         </children>
-      </VBox>
-      <ScrollPane layoutX="319.0" layoutY="58.0" prefHeight="628.0" prefWidth="707.0">
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <content>
-            <VBox>
-               <children>
-                  <HBox prefHeight="192.0" prefWidth="687.0" spacing="20.0">
-                     <children>
-                        <VBox prefHeight="192.0" prefWidth="349.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Commits">
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Text>
-                              <ScrollPane prefHeight="200.0" prefWidth="200.0" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="192.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Commits">
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Text>
-                              <ScrollPane prefHeight="176.0" prefWidth="318.0" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <VBox fillWidth="false" prefHeight="171.0" prefWidth="709.0" VBox.vgrow="NEVER">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Your Invitations" wrappingWidth="135.638671875">
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Text>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="144.0" prefWidth="726.0" />
-                     </children>
-                     <padding>
-                        <Insets right="23.0" top="10.0" />
-                     </padding>
-                  </VBox>
-                  <VBox fillWidth="false" prefHeight="171.0" prefWidth="709.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Logs" wrappingWidth="135.638671875">
-                           <VBox.margin>
-                              <Insets bottom="5.0" />
-                           </VBox.margin>
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Text>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="144.0" prefWidth="726.0" />
-                     </children>
-                     <padding>
-                        <Insets right="23.0" top="10.0" />
-                     </padding>
-                  </VBox>
-               </children>
-            </VBox>
-         </content>
-      </ScrollPane>
-      <HBox layoutX="318.0" layoutY="24.0" prefHeight="29.0" prefWidth="707.0" spacing="100.0">
-         <children>
-            <Text fx:id="selectedname" fill="WHITE" strokeType="OUTSIDE" strokeWidth="30.0" text="Silicon Valley Voice app" wrappingWidth="205.7958984375">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <HBox prefHeight="29.0" prefWidth="371.0" spacing="10.0">
-               <children>
-                  <Button fx:id="addCleintButton" mnemonicParsing="false" onMouseClicked="#addClient" prefHeight="26.0" prefWidth="120.0" text="Add client" />
-                  <Button mnemonicParsing="false" onMouseClicked="#addValidator" prefHeight="25.0" prefWidth="133.0" text="Add Validator" />
-                  <Button fx:id="commitButton" mnemonicParsing="false" onMouseClicked="#commit" prefHeight="25.0" prefWidth="139.0" text="Commit Changes" />
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" prefHeight="719.0"
+	prefWidth="1080.0" xmlns="http://javafx.com/javafx/21"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.intermediary.controllers.PrimaryController">
+	<children>
+		<ImageView fitHeight="780.0" fitWidth="1080.0"
+			pickOnBounds="true" preserveRatio="true">
+			<image>
+				<Image url="@peter-olexa-Q5GnQxjX7Jk-unsplash.jpg" />
+			</image>
+		</ImageView>
+		<HBox id="sideBarHeader" alignment="CENTER" layoutX="14.0"
+			layoutY="20.0" prefHeight="29.0" prefWidth="265.0" spacing="150.0">
+			<children>
+				<Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="30.0"
+					text="Projects">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Text>
+				<ImageView fx:id="plusButton" fitHeight="100.0"
+					fitWidth="30.0" onMouseClicked="#addProject" pickOnBounds="true"
+					preserveRatio="true">
+					<image>
+						<Image url="@icons8-plus-48.png" />
+					</image>
+				</ImageView>
+			</children>
+		</HBox>
+		<VBox id="sideBarContainer" fillWidth="false" layoutX="14.0"
+			layoutY="58.0" prefHeight="708.0" prefWidth="273.0" spacing="15.0">
+			<children>
+				<TextField prefHeight="25.0" prefWidth="265.0"
+					promptText="Search Projects" />
+				<ListView fx:id="sideBarList" prefHeight="546.0"
+					prefWidth="265.0" />
+				<Button fx:id="signoutButton" mnemonicParsing="false"
+					onMouseClicked="#signOut" prefHeight="25.0" prefWidth="266.0"
+					text="sign out" textFill="#184965" />
+			</children>
+		</VBox>
+		<ScrollPane layoutX="319.0" layoutY="58.0"
+			prefHeight="628.0" prefWidth="707.0">
+			<padding>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+			</padding>
+			<content>
+				<VBox>
+					<children>
+						<HBox prefHeight="192.0" prefWidth="687.0" spacing="20.0">
+							<children>
+								<VBox prefHeight="192.0" prefWidth="349.0">
+									<children>
+										<Text strokeType="OUTSIDE" strokeWidth="0.0"
+											text="Commits">
+											<VBox.margin>
+												<Insets bottom="5.0" />
+											</VBox.margin>
+											<font>
+												<Font size="14.0" />
+											</font>
+										</Text>
+										<ScrollPane prefHeight="200.0" prefWidth="200.0" />
+									</children>
+								</VBox>
+								<VBox prefHeight="192.0">
+									<children>
+										<Text strokeType="OUTSIDE" strokeWidth="0.0"
+											text="Commits">
+											<VBox.margin>
+												<Insets bottom="5.0" />
+											</VBox.margin>
+											<font>
+												<Font size="14.0" />
+											</font>
+										</Text>
+										<ScrollPane prefHeight="176.0" prefWidth="318.0" />
+									</children>
+								</VBox>
+							</children>
+						</HBox>
+						<VBox fillWidth="false" prefHeight="171.0" prefWidth="709.0"
+							VBox.vgrow="NEVER">
+							<children>
+								<Text strokeType="OUTSIDE" strokeWidth="0.0"
+									text="Your Invitations" wrappingWidth="135.638671875">
+									<VBox.margin>
+										<Insets bottom="5.0" />
+									</VBox.margin>
+									<font>
+										<Font size="14.0" />
+									</font>
+								</Text>
+								<ScrollPane fitToHeight="true" fitToWidth="true"
+									prefHeight="144.0" prefWidth="726.0" />
+							</children>
+							<padding>
+								<Insets right="23.0" top="10.0" />
+							</padding>
+						</VBox>
+						<VBox fillWidth="false" prefHeight="171.0" prefWidth="709.0">
+							<children>
+								<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Logs"
+									wrappingWidth="135.638671875">
+									<VBox.margin>
+										<Insets bottom="5.0" />
+									</VBox.margin>
+									<font>
+										<Font size="14.0" />
+									</font>
+								</Text>
+								<ScrollPane fitToHeight="true" fitToWidth="true"
+									prefHeight="144.0" prefWidth="726.0" />
+							</children>
+							<padding>
+								<Insets right="23.0" top="10.0" />
+							</padding>
+						</VBox>
+					</children>
+				</VBox>
+			</content>
+		</ScrollPane>
+		<HBox layoutX="318.0" layoutY="24.0" prefHeight="29.0"
+			prefWidth="707.0" spacing="100.0">
+			<children>
+				<Text fx:id="selectedname" fill="WHITE" strokeType="OUTSIDE"
+					strokeWidth="30.0" text="Silicon Valley Voice app"
+					wrappingWidth="205.7958984375">
+					<font>
+						<Font size="18.0" />
+					</font>
+				</Text>
+				<HBox prefHeight="29.0" prefWidth="371.0" spacing="10.0">
+					<children>
+						<Button fx:id="addCleintButton" mnemonicParsing="false"
+							onMouseClicked="#addClient" prefHeight="26.0" prefWidth="120.0"
+							text="Invite" />
+						<Button mnemonicParsing="false"
+							onMouseClicked="#addValidator" prefHeight="25.0"
+							prefWidth="133.0" text="Add Validator" />
+						<Button fx:id="commitButton" mnemonicParsing="false"
+							onMouseClicked="#commit" prefHeight="25.0" prefWidth="139.0"
+							text="Commit Changes" />
+					</children>
+				</HBox>
+			</children>
+		</HBox>
+	</children>
 </AnchorPane>
