--- a/src/main/resources/com/intermediary/signIn.fxml
+++ b/src/main/resources/com/intermediary/signIn.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField ?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,16 +33,17 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </Text>
-            <TextField prefHeight="40.0" promptText="Email">
+            <TextField fx:id="signInEmailInput"
+	prefHeight="40.0" promptText="Email">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
-            </TextField>
-            <TextField prefHeight="40.0" promptText="Password">
+            </TextField >
+            <PasswordField  fx:id="signInPasswordInput" prefHeight="40.0" promptText="Password">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
-            </TextField>
+            </PasswordField >
             <Text fill="WHITE" onMouseClicked="#showSignUpScene" strokeType="OUTSIDE" strokeWidth="0.0" text="Do not have an account ? click here to sign up">
                <VBox.margin>
                   <Insets bottom="20.0" />
