--- a/src/main/resources/com/intermediary/add_user.fxml
+++ b/src/main/resources/com/intermediary/add_user.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.intermediary.controllers.InviteController">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invite People To Project" wrappingWidth="310.693359375">
          <font>
@@ -25,8 +25,8 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search" />
             <HBox alignment="CENTER_LEFT" prefWidth="650.0" spacing="10.0">
                <children>
-                  <TextField prefWidth="450.0" promptText="search" />
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" text="Add" />
+                  <TextField fx:id="emailInput" prefWidth="450.0" promptText="search" />
+                  <Button fx:id="addBtn" mnemonicParsing="false" onMouseClicked="#addInvite" prefHeight="25.0" prefWidth="115.0" text="Add" />
                </children>
             </HBox>
          </children>
@@ -34,12 +34,12 @@
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Found 0 with username blah blah" />
       <VBox minHeight="100.0" prefWidth="100.0">
          <children>
-            <ListView prefHeight="200.0" prefWidth="200.0" />
+            <ListView fx:id="listInvites" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </VBox>
       <VBox alignment="CENTER" prefWidth="100.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="186.0" text="Invite People" />
+            <Button mnemonicParsing="false" onMouseClicked="#invite" prefHeight="25.0" prefWidth="186.0" text="Invite People" />
          </children>
       </VBox>
    </children>
