--- a/src/main/resources/com/intermediary/commit.fxml
+++ b/src/main/resources/com/intermediary/commit.fxml
@@ -2,17 +2,17 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.intermediary.controllers.CommitController">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Commit by  22323423425">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Commit">
          <font>
             <Font size="23.0" />
          </font>
@@ -25,18 +25,18 @@
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Files Changed" />
          </children>
       </VBox>
-      <ScrollPane prefHeight="200.0" prefWidth="200.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
+      <ScrollPane fx:id="container" prefHeight="200.0" prefWidth="200.0">
          <VBox.margin>
             <Insets bottom="10.0" top="10.0" />
          </VBox.margin>
+         <content>
+            <ListView fx:id="list" prefHeight="200.0" prefWidth="476.0" />
+         </content>
       </ScrollPane>
       <VBox prefWidth="100.0" spacing="10.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message" />
-            <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Type your commit message">
+            <TextArea fx:id="message" prefHeight="200.0" prefWidth="200.0" promptText="Type your commit message">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
@@ -45,8 +45,7 @@
       </VBox>
       <HBox prefWidth="200.0" spacing="20.0">
          <children>
-            <Button minWidth="100.0" mnemonicParsing="false" text="Commit" />
-            <Button minWidth="100.0" mnemonicParsing="false" text="Cancel" />
+            <Button fx:id="commitBtn" minWidth="100.0" mnemonicParsing="false" onMouseClicked="#commit" text="Commit" />
          </children>
       </HBox>
    </children>
